Fetching method for batch job details
