# openpectus/aggregator/routers/batch_job.py
@@ -1,6 +1,7 @@
 from datetime import datetime
 from typing import List
 
+from aggregator.routers.dto import Method
 from fastapi import APIRouter
 from pydantic import BaseModel
 
@@ -15,13 +16,17 @@ class BatchJob(BaseModel):
     completed_date: datetime
     contributors: List[str] = []
 
+class BatchJobRouter:
 
-@router.get("/batch_job/{id}")
-def get_batch(id: int) -> BatchJob:
-    dt = datetime(2023, 3, 21, 12, 31, 57, 0)
-    return BatchJob(id=id, unit_id="3", unit_name="Foo", completed_date=dt, contributors=[])
+    @router.get("/batch_job/{id}")
+    def get_batch(id: str) -> BatchJob:
+        dt = datetime(2023, 3, 21, 12, 31, 57, 0)
+        return BatchJob(id=id, unit_id="3", unit_name="Foo", completed_date=dt, contributors=[])
 
+    @router.get("/recent_batch_jobs")
+    def get_recent_batch_jobs() -> List[BatchJob]:
+        return []
 
-@router.get("/recent_batch_jobs")
-def get_recent_batch_jobs() -> List[BatchJob]:
-    return []
+    @router.get('/batch_job/{id}/method')
+    def get_batch_job_method(id: str) -> Method:
+        return Method(lines=[], started_line_ids=[], executed_line_ids=[], injected_line_ids=[])
